hero-detail is passed an object now

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,8 +1,8 @@
 <h3>
-  {{name}} details!
+  {{hero.name}} details!
 </h3>
-<div><label>id: </label>{{id}}</div>
+<div><label>id: </label>{{hero.id}}</div>
 <div>
   <label for='name'>Name: </label>
-  <input type='text' id='name' [(ngModel)]='name' />
+  <input type='text' id='name' [(ngModel)]='hero.name' />
 </div>
