--- a/src/app/hero-list/hero-list.component.html
+++ b/src/app/hero-list/hero-list.component.html
@@ -8,5 +8,5 @@
 </ul>
 
 <div *ngIf='selectedHero'>
-  <hero-detail [id]='selectedHero.id' [name]='selectedHero.name' ></hero-detail>
+  <hero-detail [hero]='selectedHero' ></hero-detail>
 </div>
